deployed highlightText, refractored middleware
